<package>
  <name>saw_maxon_epos_examples</name>
  <version>1.0.0</version>
  <description>sawMaxonEPOS examples</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawMaxonEPOS</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>saw_maxon_epos</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>saw_maxon_epos</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
